--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,7 @@
     <title>HyGenie : Stay Home Stay Safe</title>
   </head>
   <body>
+    <script src="https://js.stripe.com/v3/"></script>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
