--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Masks, Sanitizers, Hand Wash and Gloves at your door step"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -32,7 +32,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>HyGenie : Stay Home Stay Safe</title>
+    <title>HyGenie | Stay Home Stay Safe</title>
   </head>
   <body>
     <script src="https://js.stripe.com/v3/"></script>
